--- a/package.json
+++ b/package.json
@@ -21,9 +21,18 @@
   "devDependencies": {
     "@babel/core": "^7.1.6",
     "@babel/preset-env": "^7.1.6",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.4",
+    "source-map-loader": "^0.2.4",
+    "typescript": "^3.1.6",
     "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
+  },
+  "dependencies": {
+    "@types/react": "^16.7.7",
+    "@types/react-dom": "^16.0.10",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3"
   }
 }
