--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "devDependencies": {
     "@babel/core": "^7.1.6",
     "@babel/preset-env": "^7.1.6",
+    "@types/webpack-env": "^1.13.6",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.4",
+    "react-hot-loader": "^4.3.12",
     "source-map-loader": "^0.2.4",
     "typescript": "^3.1.6",
     "webpack": "^4.26.0",
