--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Infames Music Label App",
   "main": "index.js",
   "scripts": {
+    "build": "webpack -p --mode production",
     "start": "webpack-dev-server --config ./webpack.config.js --mode development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,10 +22,17 @@
   "devDependencies": {
     "@babel/core": "^7.1.6",
     "@babel/preset-env": "^7.1.6",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.1.0",
     "@types/webpack-env": "^1.13.6",
-    "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.4",
+    "css-loader": "^1.0.1",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.5",
+    "node-sass": "^4.10.0",
     "react-hot-loader": "^4.3.12",
+    "sass-loader": "^7.1.0",
     "source-map-loader": "^0.2.4",
     "typescript": "^3.1.6",
     "webpack": "^4.26.0",
