--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
     "@types/webpack-env": "^1.13.6",
     "babel-loader": "^8.0.4",
     "css-loader": "^1.0.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.5",
     "node-sass": "^4.10.0",
     "react-hot-loader": "^4.3.12",
     "sass-loader": "^7.1.0",
     "source-map-loader": "^0.2.4",
+    "style-loader": "^0.23.1",
     "typescript": "^3.1.6",
     "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2",
