--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Infames Music Label App",
   "main": "index.js",
   "scripts": {
-    "build": "webpack -d && cp src/index.html dist/index.html && webpack-dev-server --hot --inline --colors --progress --content-base src/",
-    "build-prod": "webpack -p && cp src/index.html dist/index.html",
+    "build": "webpack -d && webpack-dev-server --hot --inline --colors --progress --content-base src/",
+    "build-prod": "webpack -p --mode production",
     "lint": "esw webpack.config.* src tools --color",
     "lint:watch": "npm run lint -- --watch",
     "start": "npm-run-all --parallel build lint:watch"
