--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Infames Music Label App",
   "main": "index.js",
   "scripts": {
-    "build": "webpack -d && webpack-dev-server --hot --inline --colors --progress --content-base src/",
-    "build-prod": "webpack -p --mode production",
+    "build": "webpack --mode=development -d && webpack-dev-server --hot --inline --colors --progress --content-base src/",
+    "build-prod": "webpack -p --mode=production",
     "lint": "esw webpack.config.* src tools --color",
     "lint:watch": "npm run lint -- --watch",
-    "start": "npm-run-all --parallel build lint:watch"
+    "start": "npm-run-all --parallel build lint:watch",
+    "test": "jest --config jest.config.js"
   },
   "repository": {
     "type": "git",
@@ -21,26 +22,47 @@
     "url": "https://github.com/ronniefuentealba/infamesmusic/issues"
   },
   "homepage": "https://github.com/ronniefuentealba/infamesmusic#readme",
+  "jest": {
+    "transform": {
+      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ]
+  },
   "devDependencies": {
     "@babel/core": "^7.1.6",
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
+    "@types/enzyme": "^3.1.15",
+    "@types/enzyme-adapter-react-16": "^1.0.3",
+    "@types/jest": "^23.3.9",
     "@types/webpack-env": "^1.13.6",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "css-loader": "^1.0.1",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.7.0",
+    "enzyme-to-json": "^3.3.4",
     "eslint": "^5.9.0",
     "eslint-plugin-react": "^7.11.1",
     "eslint-watch": "^4.0.2",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^23.6.0",
     "node-sass": "^4.10.0",
     "npm-run-all": "^4.1.5",
     "react-hot-loader": "^4.3.12",
+    "react-test-renderer": "^16.6.3",
     "sass-loader": "^7.1.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
+    "ts-jest": "^23.10.5",
     "typescript": "^3.1.6",
     "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2",
