--- a/package.json
+++ b/package.json
@@ -52,12 +52,14 @@
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
     "ts-jest": "^23.10.5",
+    "tslint": "^5.11.0",
     "typescript": "^3.1.6",
     "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
+    "@material-ui/core": "^3.5.1",
     "@types/react": "^16.7.7",
     "@types/react-dom": "^16.0.10",
     "@types/react-test-renderer": "^16.0.3",
