Font loaders added

--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@types/react-test-renderer": "^16.0.3",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "react-dom": "^16.6.3",
+    "typeface-roboto": "0.0.54"
   }
 }
