--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,6 @@
 {
-  "presets": ["@babel/react", "@babel/typescript", ["@babel/env", { "modules": false }]]
+  "presets": ["@babel/react", "@babel/typescript", ["@babel/env", { "modules": false }]],
+  "plugins": [
+    "@babel/plugin-proposal-class-properties",
+  ],
 }
