--- a/package.json
+++ b/package.json
@@ -1,73 +1,67 @@
 {
-  "name": "infamesmusic",
+  "name": "infames",
   "version": "1.0.0",
-  "description": "Infames Music Label App",
-  "main": "index.tsx",
+  "description": "Infames Music",
+  "main": "index.jsx",
   "scripts": {
-    "build": "webpack --mode=development -d && webpack-dev-server --hot --inline --colors --progress --content-base app/",
-    "build-prod": "webpack -p --mode=production",
-    "lint": "esw webpack.config.* /app tools --color",
-    "lint:watch": "npm run lint -- --watch",
-    "start": "npm-run-all --parallel build lint:watch",
-    "test": "jest --config jest.config.js"
+    "build": "webpack --mode production",
+    "dev": "webpack-dev-server --mode development --open",
+    "fix:other": "yarn run prettier --write",
+    "fix:js": "yarn run test:js --fix",
+    "fix": "yarn run fix:js && yarn run fix:other",
+    "prettier": "prettier \"**/*.{json,md,scss,yaml,yml}\"",
+    "start": "yarn run dev",
+    "test:other": "yarn run prettier --list-different",
+    "test:js": "eslint --ignore-path .gitignore --ignore-path .prettierignore \"**/*.{js,jsx}\"",
+    "test": "yarn run test:other && yarn run test:js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ronniefuentealba/infamesmusic.git"
+    "url": "https://github.globant.com/leonardo-vega/infames.git"
   },
   "keywords": [],
-  "author": "@maeplayo",
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ronniefuentealba/infamesmusic/issues"
-  },
-  "homepage": "https://github.com/ronniefuentealba/infamesmusic#readme",
   "devDependencies": {
-    "@babel/core": "^7.1.6",
-    "@babel/preset-env": "^7.1.6",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.1.0",
-    "@types/enzyme": "^3.1.15",
-    "@types/enzyme-adapter-react-16": "^1.0.3",
-    "@types/jest": "^23.3.9",
-    "@types/webpack-env": "^1.13.6",
-    "babel-jest": "^23.6.0",
-    "babel-loader": "^8.0.4",
-    "css-loader": "^1.0.1",
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.7.0",
-    "enzyme-to-json": "^3.3.4",
-    "eslint": "^5.9.0",
-    "eslint-plugin-react": "^7.11.1",
-    "eslint-watch": "^4.0.2",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^2.0.0",
+    "@babel/preset-typescript": "^7.10.4",
+    "babel-eslint": "^10.0.2",
+    "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.1",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "4.1.0",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "3.0.1",
+    "eslint-plugin-react": "^7.14.2",
+    "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^23.6.0",
-    "node-sass": "^4.10.0",
-    "npm-run-all": "^4.1.5",
-    "react-hot-loader": "^4.3.12",
-    "react-test-renderer": "^16.6.3",
+    "husky": "1.3.1",
+    "lint-staged": "8.1.5",
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.11.0",
+    "prettier": "1.16.4",
+    "react-hot-loader": "^4.6.5",
     "sass-loader": "^7.1.0",
-    "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
-    "ts-jest": "^23.10.5",
-    "tslint": "^5.11.0",
-    "typescript": "^3.1.6",
-    "webpack": "^4.26.0",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "url-loader": "^1.1.2",
+    "webpack": "^4.29.3",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
-    "@material-ui/core": "^3.5.1",
-    "@material-ui/icons": "^3.0.1",
-    "@types/react": "^16.7.7",
-    "@types/react-dom": "^16.0.10",
-    "@types/react-test-renderer": "^16.0.3",
-    "prop-types": "^15.6.2",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "typeface-roboto": "0.0.54"
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/styles": "^4.1.2",
+    "antd": "^3.16.2",
+    "dotenv": "^7.0.0",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
+    "react-router-dom": "^5.0.0",
+    "webfontloader": "^1.6.28"
   }
 }
