--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-mailchimp-form": "^1.0.2",
+    "react-nextjs-toast": "^1.2.5",
     "react-scroll-parallax": "^2.3.4",
     "swr": "^0.3.0"
   },
