--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.19.2",
+    "jss-preset-default": "^10.4.0",
     "next": "^9.4.4",
+    "next-fonts": "^1.4.0",
     "next-videos": "1.2.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-jss": "^10.3.0",
     "react-mailchimp-form": "^1.0.2",
     "react-nextjs-toast": "^1.2.5",
     "react-scroll-parallax": "^2.3.4",
