Refactor back to SCSS

--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/styles": "^4.10.0",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
+    "aphrodite": "^2.4.0",
     "axios": "^0.19.2",
     "jss-preset-default": "^10.4.0",
     "next": "^9.4.4",
@@ -26,7 +28,9 @@
     "react-jss": "^10.3.0",
     "react-mailchimp-form": "^1.0.2",
     "react-nextjs-toast": "^1.2.5",
+    "react-on-screen": "^2.1.1",
     "react-scroll-parallax": "^2.3.4",
+    "react-visibility-sensor": "^5.1.1",
     "swr": "^0.3.0"
   },
   "devDependencies": {
