Integration with Firebase

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@zeit/next-sass": "^1.0.1",
     "aphrodite": "^2.4.0",
     "axios": "^0.19.2",
+    "firebase": "^7.19.0",
     "jss-preset-default": "^10.4.0",
+    "lodash": "^4.17.20",
     "next": "^9.4.4",
     "next-fonts": "^1.4.0",
     "next-videos": "1.2.0",
